2002-02-04  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-wrappers.ads, ssl-wrappers.adb:
	(SSL_clear): New routine stub.

2002-02-04  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* ssl-thin.ads:
	(SSL_clear): New routine binded.

2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(clean): Use rm -f to avoid warnings.

2003-01-22  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(ssl-thin): New target.
	(ssl-wrappers): New target.
	(libnosslaws.a): New target.
	Only rebuild libnosslaws.a if necessary, it avoids rebuilding all
	 the demos.

2002-12-25  Dmitriy Anisimkov  <anisimkov@yahoo.com>

	* makefile:
	Remove wrappers from .SILENT list.

2002-12-23  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(build): Rename libsslaws.a to libnosslaws.a.

2002-12-23  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(wrappers): Removed.
	(build): Build libsslaws.a.

2002-12-17  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-thin.ads:
	Fix TLS casing.

2002-12-16  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-thin.ads:
	A lot of casing fixes.

	* ssl-wrappers.adb:
	Put all routines in alphabetical order.
	Fix casing.

	* ssl-wrappers.ads:
	Fix casing.

2002-12-14  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(GARGS): Add $(GFLAGS).

2002-12-12  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl.adb:
	Remove this unit.

	* makefile:
	(wrappers): New target.
	Add echo for the build.

	* ssl-thin.ads:
	Add with System here now (was in parent unit).

	* ssl-wrappers.ads, ssl-wrappers.adb:
	Initial revision.

	* ssl.ads:
	This is now an empty package. All the code has been moved to
	 AWS.Net.SSL.

2002-12-04  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Add -q (quiet mode) to gnatmake call.

2002-11-24  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl.adb:
	Minor reformatting.

2002-09-19  Pascal Obry  <p.obry@wanadoo.fr>

	* ssl-thin.ads:
	Complete reformatting.

	* ssl.adb:
	(CRLF): New constant.
	(Read): Removed as it was not used.
	(Put_Line): Use CRLF.
	(New_Line): USe CRLF.
	Reformat code.