@@ -1,3 +1,8 @@
+2002-02-15  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* ssl-wrappers.ads, ssl-wrappers.adb:
+	(CRYPTO_set_mem_functions): New stub routines.
+
 2002-02-04  Dmitriy Anisimkov  <anisimkov@yahoo.com>
 
 	* ssl-wrappers.ads, ssl-wrappers.adb:
